# junpilot

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.sh
collector/: gitCollector.py
diffision/: fineTunning.py  generate.py  prepare_dataset.py
diffision/model/dataset/: sample-train.txt  sample-validation.txt
junai/: apps.py
junpilot/: asgi.py  settings.py  urls.py  wsgi.py
junpiolot/: asgi.py  settings.py  urls.py  wsgi.py
junpiolot4/: asgi.py  settings.py  urls.py  wsgi.py
