[tool.poetry]
name = "junpiolot"
version = "0.1.0"
description = ""
authors = ["Junnyjun <chbe5082@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
jinja2 = "^3.1.6"
requests = "^2.32.3"
protobuf = "^6.30.1"
transformers = "^4.49.0"
torch = "^2.6.0"
sentencepiece = "^0.2.0"
dataset = "^1.6.2"
accelerate = "^1.5.2"
datasets = "^3.4.1"
tokenizers = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
